[package]
name = "tasklog"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/lucasmdjl/tasklog"
description = "A command-line task tracking tool."
readme = "README.md"
keywords = ["task", "tracking", "tasklog", "time-tracking", "cli"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
config = "0.14.0"
dirs = "5.0.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
toml = "0.8.14"
