[package]
name = "tasklog"
version = "0.1.5"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/lucasmdjl/tasklog"
description = "A command-line task tracking tool."
readme = "README.md"
keywords = ["task", "tracking", "tasklog", "time-tracking", "cli"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
chrono = { version = "0.4.38",default-features = false, features = ["serde", "clock"] }
clap = { version = "4.5.9", default-features = false, features = ["derive", "std"] }
colored = { version = "2.1.0", default-features = false, features = [] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
dirs = { version = "5.0.1", default-features = false, features = [] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.120", default-features = false, features = ["std"] }
thiserror = { version = "1.0.62", default-features = false, features = [] }
toml = { version = "0.8.14", default-features = false, features = ["display"] }
